--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(ConnectionDemo)
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(Boost_USE_STATIC_LIBS ON)
 
 # Include Boost libraries
 find_package(Boost REQUIRED COMPONENTS system)
