--- a/SecurityProj/SecurityProj.vcxproj.filters
+++ b/SecurityProj/SecurityProj.vcxproj.filters
@@ -43,5 +43,11 @@
     <ClInclude Include="..\..\CAUSecurityDesign242\Server.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\..\..\..\..\..\Program Files\MySQL\MySQL Server 8.0\lib\libmysql.lib" />
   </ItemGroup>
 </Project>
